design: fix note list item title overflow

--- a/src/components/note/NoteList.module.css
+++ b/src/components/note/NoteList.module.css
@@ -24,6 +24,7 @@
     box-sizing: border-box;
     padding-left: 10px;
     padding-bottom: 1px;
+    padding-right: 5px;
     cursor: pointer;
     color: #eeeeee;
 }
@@ -31,6 +32,13 @@
 .noteItem:hover {
     background-color: #abb0f2;
     color: black;
+}
+
+.noteTitle {
+    margin: 0px;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
 
 .noteBox {
